<resources>
    <string name="app_name">IMKotlin</string>
    <string name="user_name_error">用户名不合法，3到20位，首字母必须是英文字符</string>
    <string name="password_error">密码不合法，3到20位数字</string>
    <string name="confirm_password_error">密码和确认密码不一致</string>
    <string name="registering">正在注册</string>
    <string name="logging">正在登录</string>
    <string name="register_failed">注册失败</string>
    <string name="login_failed">登录失败</string>
    <string name="permission_denied">权限被拒绝</string>
    <string name="message">消息</string>
    <string name="contact">联系人</string>
    <string name="dynamic">动态</string>
    <string name="logout">退出%s</string>
    <string name="logouting">正在退出…</string>
    <string name="logout_failed">退出失败</string>
    <string name="load_contacts_failed">加载联系人失败</string>
    <string name="friend_not_found">未找到好友</string>
    <string name="add_friend">添加好友</string>
    <string name="searching">搜索中…</string>
    <string name="search_failed">搜索失败</string>
    <string name="search_success">搜索成功</string>
    <string name="add">添加</string>
    <string name="already_added">已添加</string>
    <string name="send_add_friend_failed">发送好友申请失败</string>
    <string name="send_add_friend_success">发送好友申请成功</string>
    <string name="delete_friend_title">删除好友</string>
    <string name="delete_friend_message">是否与%s友尽？</string>
    <string name="confirm">确认</string>
    <string name="delete_friend_failed">删除好友失败</string>
    <string name="delete_friend_success">删除好友成功</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="chat_title">%s</string>
    <string name="send_message_failed">发送消息失败</string>
    <string name="send_message_success">发送消息成功</string>
    <string name="no_text_message">非文本消息</string>
    <string name="receive_new_message">收到新消息</string>
    <string name="user_login_another_device">用户在其他设备登录</string>
    <string name="user_already_exist">用户已存在</string>
    <string name="register_success">注册成功</string>
    <string name="logout_success">退出登录成功</string>
    <string name="login_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_register">登录</string>
    <string name="login_newUser">新用户注册</string>
    <string name="login_head">头像</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="back">退回点击</string>
    <string name="add_friend_check">加好友点击</string>
    <string name="personal_avatar">个人图片</string>
    <string name="contact_avatar">联系人头像</string>
    <string name="contact_uncle">Uncle</string>
    <string name="aaaa">aaaa</string>
    <string name="_2019_11_27">2019–11–27</string>
    <string name="_9_30">上午9:30</string>
    <string name="self_avatar">自己头像</string>
    <string name="_hello">hello</string>
    <string name="ming_zhi">名字</string>
    <string name="last_message">最后消息</string>
    <string name="time_1_21">1:21</string>
    <string name="count_20">20</string>
    <string name="relogin">设备在其他地方登录，需要重新登录</string>
    <string name="TODO">TODO</string>
    <string name="access_to_groups">确认进入群组</string>
</resources>
