<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/qq_gray_dark"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:text="@string/_9_30"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/avatar1"
                android:layout_margin="8dp"
                android:layout_alignParentStart="true" android:contentDescription="@string/self_avatar"/>

        <TextView
                android:id="@+id/receiveMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/avatar"
                android:text="@string/_hello"
                android:gravity="center"
                android:background="@drawable/receive_msg_normal"
                android:padding="5dp"/>

    </RelativeLayout>

</LinearLayout>