<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="5dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/avatar_10"
                android:layout_margin="5dp"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_toEndOf="@+id/avatar">

            <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/aaaa"/>

            <TextView
                    android:id="@+id/timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/_2019_11_27"/>

        </LinearLayout>

        <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:text="@string/add"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>